# june-pea-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  plan.md
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: main.rs
crates/api-gateway/src/middleware/: auth.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs  routes.rs
crates/catalog/src/domain/: cache.rs  catalog_repository.rs  mod.rs  model.rs
crates/catalog/src/infrastructure/: mod.rs
crates/catalog/src/infrastructure/cache/: redis.rs
crates/catalog/src/infrastructure/persistence/: postgres.rs
crates/catalog/src/infrastructure/persistence/reflect/: mod.rs  product_row.rs  product_variant_row.rs
crates/catalog/src/usecase/: create_category.rs  create_product.rs  delete_category.rs  delete_product.rs  list_categories.rs  list_products.rs  mod.rs  product_details.rs  update_product.rs
crates/catalog/tests/: integration_test.rs
crates/frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
crates/frontend/src/: main.rs
crates/frontend/src/api/: client.rs  types.rs
crates/frontend/src/components/: admin_layout.rs  auth_guard.rs  layout.rs  mod.rs
crates/frontend/src/pages/: cart.rs  checkout.rs  dashboard.rs  home.rs  login.rs  mod.rs  orders.rs  product_detail.rs  products.rs  profile.rs  register.rs
crates/frontend/src/pages/admin/: categories.rs  dashboard.rs  inventory.rs  memberships.rs  mod.rs  orders.rs  payment_invoices.rs  products.rs  promotions.rs  reports_analytics.rs  staff.rs  suppliers.rs
crates/frontend/src/state/: auth.rs  cart.rs  mod.rs
crates/frontend/style/: input.css  output.css
crates/identify/: .env  Cargo.toml
crates/identify/src/: lib.rs  routes.rs
crates/identify/src/domain/: mod.rs  model.rs  user_repository.rs
crates/identify/src/dto/: auth.rs
crates/identify/src/infrastructure/persistence/: postgres.rs
crates/identify/src/infrastructure/persistence/reflect/: user_row.rs
crates/identify/src/usecase/: auth.rs  get_me.rs  list_users.rs  mod.rs  update_profile.rs
crates/identify/tests/: integration_test.rs
crates/inventory/: Cargo.toml
crates/inventory/src/: lib.rs  routes.rs
crates/inventory/src/domain/: model.rs  repository.rs
crates/inventory/src/infrastructure/persistence/: mod.rs  postgres.rs
crates/inventory/src/infrastructure/persistence/reflect/: mod.rs  stock_row.rs
crates/inventory/src/usecase/: decrease_stock.rs  get_stock.rs  increase_stock.rs  list_all_stocks.rs  mod.rs  update_stock.rs
crates/inventory/tests/: integration_test.rs
crates/marketing/: Cargo.toml
crates/marketing/src/: lib.rs  routes.rs
crates/marketing/src/domain/: model.rs  repository.rs
crates/marketing/src/infrastructure/: postgres.rs
crates/marketing/src/usecase/: create_coupon.rs  deactivate_coupon.rs  delete_coupon.rs  list_coupons.rs  mod.rs  validate_coupon.rs
crates/marketing/tests/: integration_test.rs
crates/ordering/: Cargo.toml
crates/ordering/src/: routes.rs
crates/ordering/src/domain/: mod.rs  model.rs  repository.rs
crates/ordering/src/domain/rules/: mod.rs  order_item_quantity_must_be_positive.rs  order_must_be_pending_to_cancel.rs  order_must_have_items.rs
crates/ordering/src/infrastructure/persistence/: postgres.rs
crates/ordering/src/infrastructure/persistence/reflect/: mod.rs  order_item_row.rs  order_row.rs
crates/ordering/src/usecase/: cancel_order.rs  get_order.rs  list_all_orders.rs  list_orders.rs  mod.rs  place_order.rs  update_order_status.rs
crates/ordering/tests/: integration_test.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  database.rs  error.rs  lib.rs  rules.rs
crates/shared/src/infrastructure/: postgres.rs
migrations/: 00_identity.sql  01_catalog.sql  02_ordering.sql  03_marketing.sql  04_inventory.sql  05_seed.sql  06_guest_checkout.sql
