[workspace]
resolver = "2"
members = [
    "crates/api-gateway",
    "crates/catalog",
    "crates/inventory",
    "crates/shared",
    "crates/marketing",
    "crates/ordering"
]

[workspace.dependencies]
# Web framework & Async
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }

# Serialization & Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling & Logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"