[workspace]
resolver = "2"
members = [
    "crates/api-gateway",
    "crates/catalog",
    "crates/inventory",
    "crates/shared",
    "crates/marketing",
    "crates/identify",
    "crates/ordering"
]

[workspace.dependencies]
# Web framework & Async
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "rust_decimal"] }

# Serialization & Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling & Logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

rust_decimal = { version = "1.40.0", features = ["db-postgres"] }
redis = {version = "1.0.4", features = ["aio", "connection-manager", "tokio-comp"] }