[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
identify = { path = "../identify" }
catalog = { path = "../catalog" }
inventory = { path = "../inventory" }
redis = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
dotenv = "0.15.0"
