[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
leptos_meta = { version = "0.7" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
gloo-net = { version = "0.6", features = ["json"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "HtmlInputElement"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
