[package]
name = "identify"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
password-hash = { version = "0.5.0", features = ["rand_core"] }