[package]
name = "ordering"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
