[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }