[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
uuid = { workspace = true }
async-trait = {workspace = true}
futures = "0.3.31"